Code: Explore the fix angle phi shifting augmentation

--- a/CNN/read_training_results.ipynb
+++ b/CNN/read_training_results.ipynb
@@ -1342,6 +1342,86 @@
     "print_ACC_AUC(df, sample_type)\n",
     "print()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# $\\phi$ shifting, fixed angle: 30, 45, 60, 90"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = './GGF_VBF_CWoLa_training_results.csv'\n",
+    "df = pd.read_csv(file_name)\n",
+    "df = df.query(\"time > '2025-06-23' and time < '2025-06-25'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting, fixed angle: 90\n",
+      "ACC: 0.637 ± 0.005\n",
+      "AUC: 0.675 ± 0.007\n",
+      "True ACC and AUC\n",
+      "ACC: 0.684 ± 0.010\n",
+      "AUC: 0.739 ± 0.012\n",
+      "$0.637 \\pm 0.005$ & $0.675 \\pm 0.007$ & $0.684 \\pm 0.010$ & $0.739 \\pm 0.012$\n",
+      "\n",
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting, fixed angle: 60\n",
+      "ACC: 0.642 ± 0.003\n",
+      "AUC: 0.682 ± 0.005\n",
+      "True ACC and AUC\n",
+      "ACC: 0.689 ± 0.007\n",
+      "AUC: 0.745 ± 0.010\n",
+      "$0.642 \\pm 0.003$ & $0.682 \\pm 0.005$ & $0.689 \\pm 0.007$ & $0.745 \\pm 0.010$\n",
+      "\n",
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting, fixed angle: 45\n",
+      "ACC: 0.643 ± 0.003\n",
+      "AUC: 0.685 ± 0.004\n",
+      "True ACC and AUC\n",
+      "ACC: 0.689 ± 0.008\n",
+      "AUC: 0.742 ± 0.012\n",
+      "$0.643 \\pm 0.003$ & $0.685 \\pm 0.004$ & $0.689 \\pm 0.008$ & $0.742 \\pm 0.012$\n",
+      "\n",
+      "quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting, fixed angle: 30\n",
+      "ACC: 0.643 ± 0.006\n",
+      "AUC: 0.684 ± 0.009\n",
+      "True ACC and AUC\n",
+      "ACC: 0.688 ± 0.007\n",
+      "AUC: 0.744 ± 0.008\n",
+      "$0.643 \\pm 0.006$ & $0.684 \\pm 0.009$ & $0.688 \\pm 0.007$ & $0.744 \\pm 0.008$\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting, fixed angle: 90'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting, fixed angle: 60'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting, fixed angle: 45'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()\n",
+    "\n",
+    "sample_type = 'quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting, fixed angle: 30'\n",
+    "print_ACC_AUC(df, sample_type)\n",
+    "print()"
+   ]
   }
  ],
  "metadata": {
