--- a/CNN/training_setup.ipynb
+++ b/CNN/training_setup.ipynb
@@ -2222,6 +2222,197 @@
     "    print(cmd)\n",
     "    i += 1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# $\\phi$ shifting with fixed angle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_45_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_45_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_45_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_45_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_45_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_45_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_45_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_45_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_45_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_45_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "aug = 45\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_{aug}_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/'] + [f'../Sample/data/quark_jet_2_cut/phi_shifting_fix/40x40/{n:02}/' for n in range(aug, 360, aug)]\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_phi_aug_fix_{aug}_{i:02}'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting, fixed angle: {aug}'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_90_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_90_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_90_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_90_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_90_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_90_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_90_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_90_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_90_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_90_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "aug = 90\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_{aug}_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/'] + [f'../Sample/data/quark_jet_2_cut/phi_shifting_fix/40x40/{n:02}/' for n in range(aug, 360, aug)]\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_phi_aug_fix_{aug}_{i:02}'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting, fixed angle: {aug}'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_30_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_30_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_30_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_30_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_30_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_30_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_30_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_30_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_30_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_30_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "aug = 30\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_{aug}_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/'] + [f'../Sample/data/quark_jet_2_cut/phi_shifting_fix/40x40/{n:02}/' for n in range(aug, 360, aug)]\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_phi_aug_fix_{aug}_{i:02}'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting, fixed angle: {aug}'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_60_config_01.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_60_config_02.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_60_config_03.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_60_config_04.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_60_config_05.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_60_config_06.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_60_config_07.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_60_config_08.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_60_config_09.json\n",
+      "python train_CNN.py config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_60_config_10.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "aug = 60\n",
+    "for seed in range(123, 1100, 100):\n",
+    "    config_path = f'config_files/quark_jet_2_cut_L_3000_pT_norm_phi_aug_fix_{aug}_config_{i:02}.json'\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        data = {}\n",
+    "\n",
+    "        data['npy_paths'] = ['../Sample/data/quark_jet_2_cut/pre-processing/40x40/'] + [f'../Sample/data/quark_jet_2_cut/phi_shifting_fix/40x40/{n:02}/' for n in range(aug, 360, aug)]\n",
+    "        data['seed'] = seed\n",
+    "        data['luminosity'] = 3000\n",
+    "        data['cut_type'] = 'quark_jet_2'\n",
+    "        data['GGF_cutflow_file'] = '../Sample/selection_results_GGF_quark_jet.npy'\n",
+    "        data['VBF_cutflow_file'] = '../Sample/selection_results_VBF_quark_jet.npy'\n",
+    "        data['model_name'] = f'quark_jet_2_cut_phi_aug_fix_{aug}_{i:02}'\n",
+    "        data['sample_type'] = f'quark jet: = 2, L: 3000 fb^-1, pT normalized, phi shifting, fixed angle: {aug}'\n",
+    "\n",
+    "        json.dump(data, f, indent=4)\n",
+    "\n",
+    "    cmd = f'python train_CNN.py {config_path}'\n",
+    "    print(cmd)\n",
+    "    i += 1"
+   ]
   }
  ],
  "metadata": {
