--- a/Sample/process_h5_sample.ipynb
+++ b/Sample/process_h5_sample.ipynb
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,6 +668,39 @@
     "        f_out['TOWER/phi'][:] += phi_shift\n",
     "        f_out['TRACK/phi'][:] += phi_shift\n",
     "        f_out['PHOTON/phi'][:] += phi_shift\n",
+    "\n",
+    "        f_out['TOWER/phi'][:] = std_phi(f_out['TOWER/phi'][:])\n",
+    "        f_out['TRACK/phi'][:] = std_phi(f_out['TRACK/phi'][:])\n",
+    "        f_out['PHOTON/phi'][:] = std_phi(f_out['PHOTON/phi'][:])\n",
+    "\n",
+    "def phi_shifting_fix(h5_path, out_h5, shift_angle=np.pi):\n",
+    "    \n",
+    "    out_h5 = Path(out_h5)\n",
+    "    out_h5.parent.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    shutil.copyfile(h5_path, out_h5)\n",
+    "\n",
+    "    with h5py.File(out_h5, 'a') as f_out:\n",
+    "        print(out_h5)\n",
+    "\n",
+    "        event_pt = np.concatenate([f_out['TOWER/pt'][:], f_out['TRACK/pt'][:], f_out['PHOTON/pt'][:]], axis=1)\n",
+    "        event_eta = np.concatenate([f_out['TOWER/eta'][:], f_out['TRACK/eta'][:], f_out['PHOTON/eta'][:]], axis=1)\n",
+    "        event_phi = np.concatenate([f_out['TOWER/phi'][:], f_out['TRACK/phi'][:], f_out['PHOTON/phi'][:]], axis=1)\n",
+    "\n",
+    "        _, new_eta, new_phi = phi_shift_and_flipping(event_pt, event_eta, event_phi)\n",
+    "\n",
+    "        f_out['TOWER/eta'][:] = new_eta[:, :MAX_CONSTI['Tower']]\n",
+    "        f_out['TRACK/eta'][:] = new_eta[:, MAX_CONSTI['Tower']:MAX_CONSTI['Tower']+MAX_CONSTI['Track']]\n",
+    "        f_out['PHOTON/eta'][:] = new_eta[:, MAX_CONSTI['Tower']+MAX_CONSTI['Track']:]\n",
+    "\n",
+    "        f_out['TOWER/phi'][:] = new_phi[:, :MAX_CONSTI['Tower']]\n",
+    "        f_out['TRACK/phi'][:] = new_phi[:, MAX_CONSTI['Tower']:MAX_CONSTI['Tower']+MAX_CONSTI['Track']]\n",
+    "        f_out['PHOTON/phi'][:] = new_phi[:, MAX_CONSTI['Tower']+MAX_CONSTI['Track']:]\n",
+    "\n",
+    "        # phi shift augmentation\n",
+    "        f_out['TOWER/phi'][:] += shift_angle\n",
+    "        f_out['TRACK/phi'][:] += shift_angle\n",
+    "        f_out['PHOTON/phi'][:] += shift_angle\n",
     "\n",
     "        f_out['TOWER/phi'][:] = std_phi(f_out['TOWER/phi'][:])\n",
     "        f_out['TRACK/phi'][:] = std_phi(f_out['TRACK/phi'][:])\n",
@@ -735,6 +768,63 @@
     "        h5_path = f'./data/quark_jet_2_cut/{name}.h5'\n",
     "        out_h5 = out_dir / f'{name}.h5'\n",
     "        phi_shifting(h5_path, out_h5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/quark_jet_2_cut/phi_shifting_fix/30/VBF_in_SR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/30/VBF_in_BR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/30/GGF_in_SR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/30/GGF_in_BR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/60/VBF_in_SR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/60/VBF_in_BR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/60/GGF_in_SR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/60/GGF_in_BR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/120/VBF_in_SR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/120/VBF_in_BR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/120/GGF_in_SR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/120/GGF_in_BR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/150/VBF_in_SR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/150/VBF_in_BR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/150/GGF_in_SR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/150/GGF_in_BR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/210/VBF_in_SR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/210/VBF_in_BR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/210/GGF_in_SR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/210/GGF_in_BR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/240/VBF_in_SR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/240/VBF_in_BR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/240/GGF_in_SR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/240/GGF_in_BR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/300/VBF_in_SR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/300/VBF_in_BR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/300/GGF_in_SR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/300/GGF_in_BR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/330/VBF_in_SR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/330/VBF_in_BR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/330/GGF_in_SR.h5\n",
+      "data/quark_jet_2_cut/phi_shifting_fix/330/GGF_in_BR.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for angle in range(30, 360, 30):\n",
+    "    \n",
+    "    out_dir = Path(f'./data/quark_jet_2_cut/phi_shifting_fix/{angle}')\n",
+    "\n",
+    "    for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "        h5_path = f'./data/quark_jet_2_cut/{name}.h5'\n",
+    "        out_h5 = out_dir / f'{name}.h5'\n",
+    "        \n",
+    "        if not out_h5.exists():\n",
+    "            phi_shifting_fix(h5_path, out_h5, angle * np.pi / 180)"
    ]
   },
   {
@@ -1747,6 +1837,85 @@
     "        h5_path = h5_dir / f'{name}.h5'\n",
     "        npy_path = npy_dir / f'{name}.npy'\n",
     "        cmd = f'python pixelation-remove_photon_info.py {h5_path} {npy_path} {res} {case} &'\n",
+    "        print(cmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $\\phi$ shifting with fixed angle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/30/VBF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/30/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/30/VBF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/30/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/30/GGF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/30/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/30/GGF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/30/GGF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/60/VBF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/60/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/60/VBF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/60/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/60/GGF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/60/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/60/GGF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/60/GGF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/90/VBF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/90/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/90/VBF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/90/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/90/GGF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/90/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/90/GGF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/90/GGF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/120/VBF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/120/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/120/VBF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/120/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/120/GGF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/120/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/120/GGF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/120/GGF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/150/VBF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/150/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/150/VBF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/150/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/150/GGF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/150/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/150/GGF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/150/GGF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/180/VBF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/180/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/180/VBF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/180/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/180/GGF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/180/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/180/GGF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/180/GGF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/210/VBF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/210/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/210/VBF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/210/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/210/GGF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/210/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/210/GGF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/210/GGF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/240/VBF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/240/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/240/VBF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/240/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/240/GGF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/240/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/240/GGF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/240/GGF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/270/VBF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/270/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/270/VBF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/270/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/270/GGF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/270/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/270/GGF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/270/GGF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/300/VBF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/300/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/300/VBF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/300/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/300/GGF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/300/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/300/GGF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/300/GGF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/330/VBF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/330/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/330/VBF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/330/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/330/GGF_in_SR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/330/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/quark_jet_2_cut/phi_shifting_fix/330/GGF_in_BR.h5 data/quark_jet_2_cut/phi_shifting_fix/40x40/330/GGF_in_BR.npy 40 &\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = 40\n",
+    "for angle in range(30, 360, 30):\n",
+    "\n",
+    "    h5_dir = Path(f'./data/quark_jet_2_cut/phi_shifting_fix/{angle}')\n",
+    "    npy_dir = Path(f'./data/quark_jet_2_cut/phi_shifting_fix/{res}x{res}/{angle}')\n",
+    "\n",
+    "    npy_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "        h5_path = h5_dir / f'{name}.h5'\n",
+    "        npy_path = npy_dir / f'{name}.npy'\n",
+    "        cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
     "        print(cmd)"
    ]
   }
